Sheet08/gen/MiniCParser.py
# Generated from MiniC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'return'", 
                     "'class'", "'public'", "'virtual'", "'bool'", "'int'", 
                     "'char'", "'string'", "'void'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'='", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'&'", 
                     "'.'", "','", "';'", "':'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "RETURN", "CLASS", 
                      "PUBLIC", "VIRTUAL", "BOOL", "INT", "CHAR", "STRING", 
                      "VOID", "BoolLiteral", "IntLiteral", "CharLiteral", 
                      "StringLiteral", "Identifier", "PLUS", "MINUS", "STAR", 
                      "DIV", "MOD", "ASSIGN", "EQ", "NEQ", "LT", "LE", "GT", 
                      "GE", "AND", "OR", "NOT", "REF", "DOT", "COMMA", "SEMI", 
                      "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "PREPROCESSOR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_classDefinition = 2
    RULE_classMember = 3
    RULE_variableDeclaration = 4
    RULE_functionDefinition = 5
    RULE_methodDefinition = 6
    RULE_constructorDefinition = 7
    RULE_parameterList = 8
    RULE_parameter = 9
    RULE_type = 10
    RULE_primitiveType = 11
    RULE_block = 12
    RULE_statement = 13
    RULE_ifStatement = 14
    RULE_whileStatement = 15
    RULE_returnStatement = 16
    RULE_expression = 17
    RULE_argumentList = 18
    RULE_literal = 19

    ruleNames =  [ "program", "declaration", "classDefinition", "classMember", 
                   "variableDeclaration", "functionDefinition", "methodDefinition", 
                   "constructorDefinition", "parameterList", "parameter", 
                   "type", "primitiveType", "block", "statement", "ifStatement", 
                   "whileStatement", "returnStatement", "expression", "argumentList", 
                   "literal" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    RETURN=4
    CLASS=5
    PUBLIC=6
    VIRTUAL=7
    BOOL=8
    INT=9
    CHAR=10
    STRING=11
    VOID=12
    BoolLiteral=13
    IntLiteral=14
    CharLiteral=15
    StringLiteral=16
    Identifier=17
    PLUS=18
    MINUS=19
    STAR=20
    DIV=21
    MOD=22
    ASSIGN=23
    EQ=24
    NEQ=25
    LT=26
    LE=27
    GT=28
    GE=29
    AND=30
    OR=31
    NOT=32
    REF=33
    DOT=34
    COMMA=35
    SEMI=36
    COLON=37
    LPAREN=38
    RPAREN=39
    LBRACE=40
    RBRACE=41
    WS=42
    LINE_COMMENT=43
    BLOCK_COMMENT=44
    PREPROCESSOR=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 139040) != 0):
                self.state = 40
                self.declaration()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDefinition(self):
            return self.getTypedRuleContext(MiniCParser.ClassDefinitionContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(MiniCParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = MiniCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.classDefinition()
                pass
            elif token in [8, 9, 10, 11, 12, 17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.functionDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MiniCParser.CLASS, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.Identifier)
            else:
                return self.getToken(MiniCParser.Identifier, i)

        def LBRACE(self):
            return self.getToken(MiniCParser.LBRACE, 0)

        def PUBLIC(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.PUBLIC)
            else:
                return self.getToken(MiniCParser.PUBLIC, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.COLON)
            else:
                return self.getToken(MiniCParser.COLON, i)

        def RBRACE(self):
            return self.getToken(MiniCParser.RBRACE, 0)

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ClassMemberContext,i)


        def SEMI(self):
            return self.getToken(MiniCParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)




    def classDefinition(self):

        localctx = MiniCParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(MiniCParser.CLASS)
            self.state = 51
            self.match(MiniCParser.Identifier)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 52
                self.match(MiniCParser.COLON)
                self.state = 53
                self.match(MiniCParser.PUBLIC)
                self.state = 54
                self.match(MiniCParser.Identifier)


            self.state = 57
            self.match(MiniCParser.LBRACE)
            self.state = 58
            self.match(MiniCParser.PUBLIC)
            self.state = 59
            self.match(MiniCParser.COLON)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 139136) != 0):
                self.state = 60
                self.classMember()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(MiniCParser.RBRACE)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 67
                self.match(MiniCParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDefinition(self):
            return self.getTypedRuleContext(MiniCParser.MethodDefinitionContext,0)


        def constructorDefinition(self):
            return self.getTypedRuleContext(MiniCParser.ConstructorDefinitionContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(MiniCParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)




    def classMember(self):

        localctx = MiniCParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classMember)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.methodDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.constructorDefinition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.variableDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniCParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(MiniCParser.Identifier, 0)

        def SEMI(self):
            return self.getToken(MiniCParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(MiniCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = MiniCParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.type_()
            self.state = 76
            self.match(MiniCParser.Identifier)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 77
                self.match(MiniCParser.ASSIGN)
                self.state = 78
                self.expression(0)


            self.state = 81
            self.match(MiniCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniCParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(MiniCParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(MiniCParser.ParameterListContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)




    def functionDefinition(self):

        localctx = MiniCParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.type_()
            self.state = 84
            self.match(MiniCParser.Identifier)
            self.state = 85
            self.match(MiniCParser.LPAREN)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 139008) != 0):
                self.state = 86
                self.parameterList()


            self.state = 89
            self.match(MiniCParser.RPAREN)
            self.state = 90
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniCParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(MiniCParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def VIRTUAL(self):
            return self.getToken(MiniCParser.VIRTUAL, 0)

        def parameterList(self):
            return self.getTypedRuleContext(MiniCParser.ParameterListContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_methodDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDefinition" ):
                listener.enterMethodDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDefinition" ):
                listener.exitMethodDefinition(self)




    def methodDefinition(self):

        localctx = MiniCParser.MethodDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 92
                self.match(MiniCParser.VIRTUAL)


            self.state = 95
            self.type_()
            self.state = 96
            self.match(MiniCParser.Identifier)
            self.state = 97
            self.match(MiniCParser.LPAREN)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 139008) != 0):
                self.state = 98
                self.parameterList()


            self.state = 101
            self.match(MiniCParser.RPAREN)
            self.state = 102
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MiniCParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(MiniCParser.ParameterListContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_constructorDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDefinition" ):
                listener.enterConstructorDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDefinition" ):
                listener.exitConstructorDefinition(self)




    def constructorDefinition(self):

        localctx = MiniCParser.ConstructorDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constructorDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MiniCParser.Identifier)
            self.state = 105
            self.match(MiniCParser.LPAREN)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 139008) != 0):
                self.state = 106
                self.parameterList()


            self.state = 109
            self.match(MiniCParser.RPAREN)
            self.state = 110
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.COMMA)
            else:
                return self.getToken(MiniCParser.COMMA, i)

        def getRuleIndex(self):
            return MiniCParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = MiniCParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.parameter()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 113
                self.match(MiniCParser.COMMA)
                self.state = 114
                self.parameter()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniCParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(MiniCParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = MiniCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.type_()
            self.state = 121
            self.match(MiniCParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MiniCParser.PrimitiveTypeContext,0)


        def REF(self):
            return self.getToken(MiniCParser.REF, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = MiniCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.primitiveType()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 124
                self.match(MiniCParser.REF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MiniCParser.BOOL, 0)

        def INT(self):
            return self.getToken(MiniCParser.INT, 0)

        def CHAR(self):
            return self.getToken(MiniCParser.CHAR, 0)

        def STRING(self):
            return self.getToken(MiniCParser.STRING, 0)

        def VOID(self):
            return self.getToken(MiniCParser.VOID, 0)

        def Identifier(self):
            return self.getToken(MiniCParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)




    def primitiveType(self):

        localctx = MiniCParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 139008) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniCParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = MiniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MiniCParser.LBRACE)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1378685550362) != 0):
                self.state = 130
                self.statement()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(MiniCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MiniCParser.VariableDeclarationContext,0)


        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MiniCParser.SEMI, 0)

        def ifStatement(self):
            return self.getTypedRuleContext(MiniCParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(MiniCParser.WhileStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(MiniCParser.ReturnStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MiniCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statement)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.expression(0)
                self.state = 140
                self.match(MiniCParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 144
                self.returnStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 145
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
